--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,4 +22,4 @@ jobs:
     #   run: docker run --network container:playground-golang go build -v ./...
 
     - name: Test
-      run: docker exec -it playground-golang go test example.com/hello
+      run: docker exec -t playground-golang go test example.com/hello
