--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,4 +22,10 @@ jobs:
     #   run: docker run --network container:playground-golang go build -v ./...
 
     - name: Test
-      run: docker exec -t playground-golang go test example.com/hello
+      run: docker exec -t playground-golang go test -v example.com/hello | go-junit-report -set-exit-code > report.xml
+
+    - name: Test Summary
+      uses: test-summary/action@v1
+      with:
+        paths: report.xml
+        if: always()
