--- a/docker/Dockerfile_github
+++ b/docker/Dockerfile_github
@@ -7,6 +7,8 @@ ENV CGO_ENABLED=0
 ENV GOOS=linux
 ENV GOARCH=amd64
 
+RUN go install github.com/jstemmer/go-junit-report@latest
+
 WORKDIR /opt/app
 
 ARG USERNAME=user
