--- a/docker/Dockerfile_github
+++ b/docker/Dockerfile_github
@@ -6,6 +6,7 @@ ENV GO111MODULE=on
 ENV CGO_ENABLED=0
 ENV GOOS=linux
 ENV GOARCH=amd64
+ENV PATH=$PATH:$HOME/go/bin
 
 RUN go install github.com/jstemmer/go-junit-report@latest
 
