WIP: cartorio app

--- a/day5/network/docker/.devcontainer/devcontainer.json
+++ b/day5/network/docker/.devcontainer/devcontainer.json
@@ -4,8 +4,8 @@
 	// Docker compose
 	// ------------------------
 	"name": "HLFNetwork",
-	"dockerComposeFile": "../docker-compose.yaml",
-	"service": "cli-network",
+	"dockerComposeFile": "../docker-compose-vscode.yaml",
+	"service": "vscode-cli-network",
 
 	// ------------------------
 	// Docker
